--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-17 18:13+0300\n"
+"POT-Creation-Date: 2023-04-18 14:00+0300\n"
 "PO-Revision-Date: 2023-04-11 22:45+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -529,9 +529,7 @@ msgstr "Die Partei verlassen?"
 #: party/templates/party/redesign/party_blocks/has_party.html:196
 msgctxt "has_party"
 msgid "Вы покинете партию, а также все связанные должности. Продолжить?"
-msgstr ""
-"Sie werden die Partei verlassen, ebenso wie alle damit verbundenen "
-"Positionen aufgeben. Weiter?"
+msgstr "Sie werden die Partei verlassen, ebenso wie alle damit verbundenen Positionen aufgeben. Weiter?"
 
 #: party/templates/party/redesign/party_blocks/has_party.html:197
 msgctxt "has_party"
@@ -1111,9 +1109,7 @@ msgstr "wie gewohnt spielen - und Belohnungen erhalten!"
 #: player/templates/player/redesign/game_event/halloween.html:219
 msgctxt "game_event"
 msgid "- с 25.10 по 1.11 заполняй прогрессию события, расходуя энергию"
-msgstr ""
-"- vom 25.10 bis zum 01.11 hast du Zeit das Event abzuschließen, indem du "
-"Energie verbrauchst"
+msgstr "- vom 25.10 bis zum 01.11 hast du Zeit das Event abzuschließen, indem du Energie verbrauchst"
 
 #: player/templates/player/redesign/game_event/halloween.html:220
 msgctxt "game_event"
@@ -1167,21 +1163,13 @@ msgstr "Persönlicher Verlauf des Ereignisses"
 
 #: player/templates/player/redesign/game_event/newyear.html:393
 msgctxt "game_event"
-msgid ""
-"Заполняется расходованием энергии, как и ежедневное финансирование, и "
-"зависит только от твоих личных усилий."
-msgstr ""
-"Voller Energieaufwand, wie die tägliche Finanzierung, und nur von Ihren "
-"persönlichen Anstrengungen abhängig."
+msgid "Заполняется расходованием энергии, как и ежедневное финансирование, и зависит только от твоих личных усилий."
+msgstr "Voller Energieaufwand, wie die tägliche Finanzierung, und nur von Ihren persönlichen Anstrengungen abhängig."
 
 #: player/templates/player/redesign/game_event/newyear.html:394
 msgctxt "game_event"
-msgid ""
-"Она позволит получить тебе премиум-аккаунт для комфортной игры, а также один "
-"из трёх этапов зимней прогрессионой рамки аватара."
-msgstr ""
-"Damit erhalten Sie einen Premium-Account, mit dem Sie bequem spielen können, "
-"sowie eine der drei Stufen des Avatar-Winterrahmens."
+msgid "Она позволит получить тебе премиум-аккаунт для комфортной игры, а также один из трёх этапов зимней прогрессионой рамки аватара."
+msgstr "Damit erhalten Sie einen Premium-Account, mit dem Sie bequem spielen können, sowie eine der drei Stufen des Avatar-Winterrahmens."
 
 #: player/templates/player/redesign/game_event/newyear.html:395
 msgctxt "game_event"
@@ -1195,21 +1183,13 @@ msgstr "Wird durch die Bemühungen aller Spieler auf dem Server ausgefüllt."
 
 #: player/templates/player/redesign/game_event/newyear.html:397
 msgctxt "game_event"
-msgid ""
-"Ты не сможешь собрать награды, открытые в общей прогрессии, пока не пройдёшь "
-"соответствующий этап личной."
-msgstr ""
-"Die in der allgemeinen Progression freigeschalteten Belohnungen können Sie "
-"erst erhalten, wenn Sie die entsprechende persönliche Stufe erreicht haben."
+msgid "Ты не сможешь собрать награды, открытые в общей прогрессии, пока не пройдёшь соответствующий этап личной."
+msgstr "Die in der allgemeinen Progression freigeschalteten Belohnungen können Sie erst erhalten, wenn Sie die entsprechende persönliche Stufe erreicht haben."
 
 #: player/templates/player/redesign/game_event/newyear.html:398
 msgctxt "game_event"
-msgid ""
-"Когда будет открыт очередной этап общей прогрессии, потрать энергию, чтобы "
-"получить свою награду"
-msgstr ""
-"Wenn die nächste Stufe der allgemeinen Progression geöffnet wird, verbrauche "
-"Energie, um deine Belohnung zu erhalten."
+msgid "Когда будет открыт очередной этап общей прогрессии, потрать энергию, чтобы получить свою награду"
+msgstr "Wenn die nächste Stufe der allgemeinen Progression geöffnet wird, verbrauche Energie, um deine Belohnung zu erhalten."
 
 #: player/templates/player/redesign/lists/skill_top.html:26
 #: player/templates/player/redesign/overview_skills.html:20
@@ -2748,9 +2728,7 @@ msgstr "Wette abschließen"
 #: storage/templates/storage/trading/trading.html:40
 msgctxt "w_trading"
 msgid "Выберите один или несколько критериев справа и нажмите \"Поиск\""
-msgstr ""
-"Wählen Sie ein oder mehrere Kriterien auf der rechten Seite und drücken Sie "
-"\"Suchen\"."
+msgstr "Wählen Sie ein oder mehrere Kriterien auf der rechten Seite und drücken Sie \"Suchen\"."
 
 #: storage/templates/storage/auctions/auctions.html:30
 #: storage/templates/storage/trading/trading.html:41
@@ -2902,9 +2880,7 @@ msgstr ""
 #: storage/templates/storage/redesign/storage.html:193
 msgctxt "storage_transfer"
 msgid "Вы можете перенести Склад в регион текущего местоположения (один раз)"
-msgstr ""
-"Sie können das Lagerhaus in die Region des aktuellen Standorts verschieben "
-"(einmalig)"
+msgstr "Sie können das Lagerhaus in die Region des aktuellen Standorts verschieben (einmalig)"
 
 #: storage/templates/storage/redesign/storage.html:206
 msgctxt "storage_transfer"
@@ -2920,9 +2896,7 @@ msgstr "Lagerhaus verbessern"
 #: storage/templates/storage/redesign/storage.html:215
 msgctxt "storage_upgrade"
 msgid "Вы можете улучшить Склад, расширив хранилища части товаров"
-msgstr ""
-"Sie können das Lagerhaus verbessern, indem Sie den Lagerraum für einige "
-"Waren erweitern"
+msgstr "Sie können das Lagerhaus verbessern, indem Sie den Lagerraum für einige Waren erweitern"
 
 #: storage/templates/storage/redesign/storage.html:216
 msgctxt "storage_upgrade"
@@ -2947,12 +2921,8 @@ msgstr "Nicht genügend Materialien"
 
 #: storage/templates/storage/redesign/storage.html:258
 msgctxt "storage_upgrade"
-msgid ""
-"Выберите товары в каждой из категорий, ёмкость Склада для которых будет "
-"увеличена"
-msgstr ""
-"Wählen Sie die Waren in jeder Kategorie aus, für die die Lagerkapazität "
-"erhöht werden soll."
+msgid "Выберите товары в каждой из категорий, ёмкость Склада для которых будет увеличена"
+msgstr "Wählen Sie die Waren in jeder Kategorie aus, für die die Lagerkapazität erhöht werden soll."
 
 #: storage/templates/storage/redesign/storage.html:265
 msgctxt "storage_upgrade"
@@ -2986,21 +2956,13 @@ msgstr "Premium Status"
 
 #: storage/templates/storage/redesign/storage.html:366
 msgctxt "storage_assets"
-msgid ""
-"Ваш премиум-аккаунт будет продлён на один месяц. Данную операцию невозможно "
-"отменить. Продолжить?"
-msgstr ""
-"Ihr Premium wird um einen Monat verlängert. Der Vorgang kann nicht "
-"abgebrochen werden. Soll ich fortfahren?"
+msgid "Ваш премиум-аккаунт будет продлён на один месяц. Данную операцию невозможно отменить. Продолжить?"
+msgstr "Ihr Premium wird um einen Monat verlängert. Der Vorgang kann nicht abgebrochen werden. Soll ich fortfahren?"
 
 #: storage/templates/storage/redesign/storage.html:368
 msgctxt "storage_assets"
-msgid ""
-"Вы активируете премиум-аккаунт, длительностью один месяц. Данную операцию "
-"невозможно отменить. Продолжить?"
-msgstr ""
-"Sie aktivieren 1 Monat Premium. Der Vorgang kann nicht abgebrochen werden. "
-"Soll ich fortfahren?"
+msgid "Вы активируете премиум-аккаунт, длительностью один месяц. Данную операцию невозможно отменить. Продолжить?"
+msgstr "Sie aktivieren 1 Monat Premium. Der Vorgang kann nicht abgebrochen werden. Soll ich fortfahren?"
 
 #: storage/templates/storage/redesign/storage.html:371
 msgctxt "storage_assets"
@@ -3551,8 +3513,7 @@ msgstr "Die Anbieter-ID muss eine Zahl sein"
 #: storage/views/trading/accept_offer.py:90
 msgctxt "w_trading"
 msgid "Нельзя принять оффер из атакованного региона"
-msgstr ""
-"Ein Angebot aus einer angegriffenen Region kann nicht angenommen werden"
+msgstr "Ein Angebot aus einer angegriffenen Region kann nicht angenommen werden"
 
 #: storage/views/trading/accept_offer.py:100
 msgctxt "w_trading"
@@ -3562,8 +3523,7 @@ msgstr "Sie können Ihr eigenes Angebot nicht annehmen"
 #: storage/views/trading/accept_offer.py:108
 msgctxt "w_trading"
 msgid "Оффер изменился, или вы ввели некорректное число"
-msgstr ""
-"Das Angebot hat sich geändert oder Sie haben eine falsche Nummer eingegeben"
+msgstr "Das Angebot hat sich geändert oder Sie haben eine falsche Nummer eingegeben"
 
 #: storage/views/trading/accept_offer.py:116
 #: storage/views/trading/cancel_offer.py:62
@@ -3580,8 +3540,7 @@ msgstr "Die Lager-ID muss eine Zahl sein"
 #: storage/views/trading/accept_offer.py:148
 msgctxt "w_trading"
 msgid "На выбранном складе недостаточно места для товара"
-msgstr ""
-"In dem ausgewählten Lager ist nicht genügend Platz für die Waren vorhanden"
+msgstr "In dem ausgewählten Lager ist nicht genügend Platz für die Waren vorhanden"
 
 #: storage/views/trading/accept_offer.py:157
 msgctxt "w_trading"
