--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-17 18:13+0300\n"
+"POT-Creation-Date: 2023-04-18 14:00+0300\n"
 "PO-Revision-Date: 2023-04-12 02:35+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -767,8 +767,7 @@ msgstr "Esta es una posición no removible"
 #: party/views/management/roles/remove_role.py:45
 msgctxt "party_manage"
 msgid "Перед удалением должности её необходимо убрать у всех игроков!"
-msgstr ""
-"¡Antes de eliminar una posición, debe ser quitadas  de todos los jugadores!"
+msgstr "¡Antes de eliminar una posición, debe ser quitadas  de todos los jugadores!"
 
 #: party/views/management/roles/remove_role.py:60
 msgctxt "party_manage"
@@ -1059,8 +1058,7 @@ msgstr "¡juega de seguido y obtén recompensas!"
 #: player/templates/player/redesign/game_event/halloween.html:219
 msgctxt "game_event"
 msgid "- с 25.10 по 1.11 заполняй прогрессию события, расходуя энергию"
-msgstr ""
-"- del 25/10 al 1/11, completa la progresión del evento gastando energía"
+msgstr "- del 25/10 al 1/11, completa la progresión del evento gastando energía"
 
 #: player/templates/player/redesign/game_event/halloween.html:220
 msgctxt "game_event"
@@ -1114,21 +1112,13 @@ msgstr "Progresión personal del evento"
 
 #: player/templates/player/redesign/game_event/newyear.html:393
 msgctxt "game_event"
-msgid ""
-"Заполняется расходованием энергии, как и ежедневное финансирование, и "
-"зависит только от твоих личных усилий."
-msgstr ""
-"Se llena con gasto energético, como la financiación diaria, y depende "
-"únicamente de tu esfuerzo personal."
+msgid "Заполняется расходованием энергии, как и ежедневное финансирование, и зависит только от твоих личных усилий."
+msgstr "Se llena con gasto energético, como la financiación diaria, y depende únicamente de tu esfuerzo personal."
 
 #: player/templates/player/redesign/game_event/newyear.html:394
 msgctxt "game_event"
-msgid ""
-"Она позволит получить тебе премиум-аккаунт для комфортной игры, а также один "
-"из трёх этапов зимней прогрессионой рамки аватара."
-msgstr ""
-"Le permitirá obtener una cuenta premium para un juego cómodo, así como una "
-"de las tres etapas de progresión del marco de avatar de invierno."
+msgid "Она позволит получить тебе премиум-аккаунт для комфортной игры, а также один из трёх этапов зимней прогрессионой рамки аватара."
+msgstr "Le permitirá obtener una cuenta premium para un juego cómodo, así como una de las tres etapas de progresión del marco de avatar de invierno."
 
 #: player/templates/player/redesign/game_event/newyear.html:395
 msgctxt "game_event"
@@ -1142,21 +1132,13 @@ msgstr "Se llena con los esfuerzos de todos los jugadores en el servidor."
 
 #: player/templates/player/redesign/game_event/newyear.html:397
 msgctxt "game_event"
-msgid ""
-"Ты не сможешь собрать награды, открытые в общей прогрессии, пока не пройдёшь "
-"соответствующий этап личной."
-msgstr ""
-"No podrás recoger las recompensas desbloqueadas en la progresión general "
-"hasta que completes la etapa correspondiente de la personal."
+msgid "Ты не сможешь собрать награды, открытые в общей прогрессии, пока не пройдёшь соответствующий этап личной."
+msgstr "No podrás recoger las recompensas desbloqueadas en la progresión general hasta que completes la etapa correspondiente de la personal."
 
 #: player/templates/player/redesign/game_event/newyear.html:398
 msgctxt "game_event"
-msgid ""
-"Когда будет открыт очередной этап общей прогрессии, потрать энергию, чтобы "
-"получить свою награду"
-msgstr ""
-"Cuando se abra la siguiente etapa de la progresión general, gasta energía "
-"para obtener tu recompensa"
+msgid "Когда будет открыт очередной этап общей прогрессии, потрать энергию, чтобы получить свою награду"
+msgstr "Cuando se abra la siguiente etapa de la progresión general, gasta energía para obtener tu recompensa"
 
 #: player/templates/player/redesign/lists/skill_top.html:26
 #: player/templates/player/redesign/overview_skills.html:20
@@ -1809,9 +1791,7 @@ msgstr "No se requiere recargar energía"
 
 #: player/views/expense_energy.py:60
 msgid "Недостаточно Энергетиков. Создайте их в Хранилище Склада"
-msgstr ""
-"No hay suficientes baterías. Créalas en el apartado de Almacenamiento del "
-"Almacén"
+msgstr "No hay suficientes baterías. Créalas en el apartado de Almacenamiento del Almacén"
 
 #: player/views/expense_energy.py:71
 msgid "Ошибка типа запроса"
@@ -2693,8 +2673,7 @@ msgstr "Ofertar"
 #: storage/templates/storage/trading/trading.html:40
 msgctxt "w_trading"
 msgid "Выберите один или несколько критериев справа и нажмите \"Поиск\""
-msgstr ""
-"Selecciona uno o más criterios con el botón derecho y clikea \"Buscar\""
+msgstr "Selecciona uno o más criterios con el botón derecho y clikea \"Buscar\""
 
 #: storage/templates/storage/auctions/auctions.html:30
 #: storage/templates/storage/trading/trading.html:41
@@ -2862,9 +2841,7 @@ msgstr "Mejorar almacén"
 #: storage/templates/storage/redesign/storage.html:215
 msgctxt "storage_upgrade"
 msgid "Вы можете улучшить Склад, расширив хранилища части товаров"
-msgstr ""
-"Puede mejorar el Almacén ampliando el inventario de una parte de los "
-"productos"
+msgstr "Puede mejorar el Almacén ampliando el inventario de una parte de los productos"
 
 #: storage/templates/storage/redesign/storage.html:216
 msgctxt "storage_upgrade"
@@ -2889,11 +2866,8 @@ msgstr "No hay suficientes materiales"
 
 #: storage/templates/storage/redesign/storage.html:258
 msgctxt "storage_upgrade"
-msgid ""
-"Выберите товары в каждой из категорий, ёмкость Склада для которых будет "
-"увеличена"
-msgstr ""
-"Seleccione bienes en cada categoría para cambiar la capacidad del almacén"
+msgid "Выберите товары в каждой из категорий, ёмкость Склада для которых будет увеличена"
+msgstr "Seleccione bienes en cada categoría para cambiar la capacidad del almacén"
 
 #: storage/templates/storage/redesign/storage.html:265
 msgctxt "storage_upgrade"
@@ -2927,21 +2901,13 @@ msgstr "de cuenta Premium"
 
 #: storage/templates/storage/redesign/storage.html:366
 msgctxt "storage_assets"
-msgid ""
-"Ваш премиум-аккаунт будет продлён на один месяц. Данную операцию невозможно "
-"отменить. Продолжить?"
-msgstr ""
-"Tu cuenta premium se renovará por un mes. Esta acción no se puede deshacer. "
-"¿Proceder?"
+msgid "Ваш премиум-аккаунт будет продлён на один месяц. Данную операцию невозможно отменить. Продолжить?"
+msgstr "Tu cuenta premium se renovará por un mes. Esta acción no se puede deshacer. ¿Proceder?"
 
 #: storage/templates/storage/redesign/storage.html:368
 msgctxt "storage_assets"
-msgid ""
-"Вы активируете премиум-аккаунт, длительностью один месяц. Данную операцию "
-"невозможно отменить. Продолжить?"
-msgstr ""
-"Activarás la cuenta premium durante un mes. Esta acción no se puede "
-"deshacer. ¿Proceder?"
+msgid "Вы активируете премиум-аккаунт, длительностью один месяц. Данную операцию невозможно отменить. Продолжить?"
+msgstr "Activarás la cuenta premium durante un mes. Esta acción no se puede deshacer. ¿Proceder?"
 
 #: storage/templates/storage/redesign/storage.html:371
 msgctxt "storage_assets"
