--- a/locale/lv/LC_MESSAGES/django.po
+++ b/locale/lv/LC_MESSAGES/django.po
@@ -532,63 +532,73 @@ msgctxt "no_party"
 msgid "создать партию"
 msgstr ""
 
+#. Last modified by Артур Двинский, id 5
 #: party/templates/party/redesign/party.html:61
 msgctxt "has_party"
 msgid "исключить"
-msgstr ""
+msgstr "izslēgt"
 
+#. Last modified by Артур Двинский, id 5
 #: party/templates/party/redesign/party_blocks/has_party.html:12
 #: party/templates/party/redesign/party_blocks/no_party.html:10
 msgctxt "has_party"
 msgid "Партия"
-msgstr ""
+msgstr "Partija"
 
+#. Last modified by Артур Двинский, id 5
 #: party/templates/party/redesign/party_blocks/has_party.html:130
 #: party/templates/party/redesign/party_requests.html:29
 #: party/templates/party/redesign/party_view.html:175
 msgctxt "has_party"
 msgid "Никнейм"
-msgstr ""
+msgstr "Nikneims"
 
+#. Last modified by Артур Двинский, id 5
 #: party/templates/party/redesign/party_blocks/has_party.html:131
 #: party/templates/party/redesign/party_view.html:176
 msgctxt "has_party"
 msgid "Был в сети"
-msgstr ""
+msgstr "Bija tiešsaistē"
 
+#. Last modified by Артур Двинский, id 5
 #: party/templates/party/redesign/party_blocks/has_party.html:132
 #: party/templates/party/redesign/party_view.html:177
 msgctxt "has_party"
 msgid "Должность"
-msgstr ""
+msgstr "Amats"
 
+#. Last modified by Артур Двинский, id 5
 #: party/templates/party/redesign/party_blocks/has_party.html:159
 #: party/templates/party/redesign/party_blocks/has_party.html:162
 #: party/templates/party/redesign/party_view.html:200
 #: party/templates/party/redesign/party_view.html:203
 msgctxt "has_party"
 msgid "давно"
-msgstr ""
+msgstr "sen"
 
+#. Last modified by Артур Двинский, id 5
 #: party/templates/party/redesign/party_blocks/has_party.html:195
 msgctxt "has_party"
 msgid "Покинуть партию?"
-msgstr ""
+msgstr "Iziet no partijas?"
 
+#. Last modified by Артур Двинский, id 5
 #: party/templates/party/redesign/party_blocks/has_party.html:196
 msgctxt "has_party"
 msgid "Вы покинете партию, а также все связанные должности. Продолжить?"
-msgstr ""
+msgstr "Jūs \tiziesiet no partijas un atstāsiet savus amatus. Turpināt?"
 
+#. Last modified by Артур Двинский, id 5
 #: party/templates/party/redesign/party_blocks/has_party.html:197
 msgctxt "has_party"
 msgid "Продолжить"
-msgstr ""
+msgstr "Turpināt"
 
+#. Last modified by Артур Двинский, id 5
 #: party/templates/party/redesign/party_blocks/has_party.html:198
 msgctxt "has_party"
 msgid "Отмена"
-msgstr ""
+msgstr "Atcelt"
 
 #: party/templates/party/redesign/party_blocks/no_party.html:15
 msgctxt "no_party"
@@ -874,29 +884,33 @@ msgctxt "party_manage"
 msgid "Недостаточно прав для удаления должности"
 msgstr "Nepietiekamas tiesības amata dzēšanai"
 
+#. Last modified by Артур Двинский, id 5
 #: party/views/management/roles/set_role.py:35
 msgctxt "has_party"
 msgid "В партии может быть только один глава"
-msgstr ""
+msgstr "Partijā var būt tikai viens līderis"
 
+#. Last modified by Артур Двинский, id 5
 #: party/views/management/roles/set_role.py:36
 #: party/views/management/roles/set_role.py:51
 #: party/views/management/roles/set_role.py:58
 #: party/views/management/roles/set_role.py:65
 msgctxt "has_party"
 msgid "Смена должности"
-msgstr ""
+msgstr "Amata maiņa"
 
+#. Last modified by Артур Двинский, id 5
 #: party/views/management/roles/set_role.py:50
 #: party/views/management/roles/set_role.py:64
 msgctxt "has_party"
 msgid "Недостаточно прав для смены должности"
-msgstr ""
+msgstr "Jūms nav tiesību samainīt amatu"
 
+#. Last modified by Артур Двинский, id 5
 #: party/views/management/roles/set_role.py:57
 msgctxt "has_party"
 msgid "Некорректная партия игрока"
-msgstr ""
+msgstr "Nekorekta spēlētāja partija"
 
 #: party/views/management/staff/leave_party.py:37
 #: party/views/management/staff/leave_party.py:209
@@ -3189,50 +3203,59 @@ msgctxt "has_storage"
 msgid "всего денег"
 msgstr ""
 
+#. Last modified by Артур Двинский, id 5
 #: storage/templates/storage/redesign/storage_blocks/no_storage.html:7
 msgctxt "no_storage"
 msgid "склад в регионе"
-msgstr ""
+msgstr "noliktava reģionā"
 
+#. Last modified by Артур Двинский, id 5
 #: storage/templates/storage/redesign/storage_blocks/no_storage.html:9
 msgctxt "no_storage"
 msgid "Стоимость создания"
-msgstr ""
+msgstr "Izveides cena"
 
+#. Last modified by Артур Двинский, id 5
 #: storage/templates/storage/redesign/storage_blocks/no_storage.html:10
 msgctxt "no_storage"
 msgid "стали"
-msgstr ""
+msgstr "tērauda"
 
+#. Last modified by Артур Двинский, id 5
 #: storage/templates/storage/redesign/storage_blocks/no_storage.html:10
 msgctxt "no_storage"
 msgid "алюминия"
-msgstr ""
+msgstr "alumīnija"
 
+#. Last modified by Артур Двинский, id 5
 #: storage/templates/storage/redesign/storage_blocks/no_storage.html:11
 msgctxt "no_storage"
 msgid "доставка оплачивается отдельно"
-msgstr ""
+msgstr "piegāde tiek apmaksāta atsevišķi"
 
+#. Last modified by Артур Двинский, id 5
 #: storage/templates/storage/redesign/storage_blocks/no_storage.html:16
 msgctxt "no_storage"
 msgid "выберите склад списания материалов"
-msgstr ""
+msgstr "izvēlēties noliktavu materiālu norakstīšanai"
 
+#. Last modified by Артур Двинский, id 5
 #: storage/templates/storage/redesign/storage_blocks/no_storage.html:22
 msgctxt "no_storage"
 msgid "нехватка материалов!"
-msgstr ""
+msgstr "pietrūkst materiālu!"
 
+#. Last modified by Артур Двинский, id 5
 #: storage/templates/storage/redesign/storage_blocks/no_storage.html:22
 msgctxt "no_storage"
 msgid "доставка"
-msgstr ""
+msgstr "piegāde"
 
+#. Last modified by Артур Двинский, id 5
 #: storage/templates/storage/redesign/storage_blocks/no_storage.html:44
 msgctxt "no_storage"
 msgid "создать"
-msgstr ""
+msgstr "izveidot"
 
 #. Last modified by Артур Двинский, id 5
 #: storage/templates/storage/storage_lines/cash_transfer.html:9
